--- a/WingDroid/app/src/main/res/drawable/grey_st_greydark.xml
+++ b/WingDroid/app/src/main/res/drawable/grey_st_greydark.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/greyDark" android:state_selected="true" />
-    <item android:color="@color/grey" />
+    <item android:color="@color/colorPrimary" android:state_pressed="true"  android:state_focused="true"/>
+    <item android:color="@color/greyDark" android:state_focused="false"/>
 </selector>
