--- a/WingDroid/app/src/main/res/layout/item_search_category.xml
+++ b/WingDroid/app/src/main/res/layout/item_search_category.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnCategory"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/none_st_bd_greydark_rad30"
-    android:gravity="center"
-    android:paddingLeft="10dp"
-    android:paddingTop="5dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="5dp">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/txtvCategory"
-        style="@style/TextStyle.Medium"
+    <RelativeLayout
+        android:id="@+id/btnCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/none_st_bd_greydark_rad30"
         android:gravity="center"
-        android:textColor="@drawable/grey_st_greydark"
-        tools:text="Button" />
-</RelativeLayout>
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp">
 
+        <TextView
+            android:id="@+id/txtvCategory"
+            style="@style/TextStyle.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@drawable/grey_st_greydark"
+            tools:text="Button" />
+    </RelativeLayout>
+</FrameLayout>
