--- a/WingDroid/app/src/main/res/layout/item_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/item_search_result.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="@dimen/search_result_height"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/news_padding">
@@ -12,8 +13,7 @@
     <ImageView
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/bookmark_img_width"
-        android:layout_height="@dimen/bookmark_img_width"
-        android:background="@drawable/none_st_bd_greydark_rad30" />
+        android:layout_height="@dimen/bookmark_img_width" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -35,8 +35,8 @@
             style="@style/TextStyle.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginTop="8dp"
             android:layout_toRightOf="@id/txtvName"
             tools:text="LIST/GRID" />
 
