--- a/WingDroid/app/src/main/res/layout/toolbar_detail.xml
+++ b/WingDroid/app/src/main/res/layout/toolbar_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:paddingRight="12dp"
+    android:layout_height="wrap_content"
     android:background="@color/trans_white"
-    android:layout_height="wrap_content">
+    android:paddingRight="8dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,17 +11,19 @@
 
         <ImageView
             android:id="@+id/imgvBookMark"
-            android:layout_width="24dp"
-            android:layout_height="25dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_alignParentRight="true"
+            android:layout_marginTop="2dp"
+            android:padding="6dp"
             android:src="@drawable/selector_bookmark" />
 
         <ImageView
             android:id="@+id/imgvShare"
-            android:layout_marginRight="10dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_toLeftOf="@id/imgvBookMark"
-            android:layout_width="@dimen/ic_toolbar_width"
-            android:layout_height="@dimen/ic_toolbar_width"
+            android:padding="8dp"
             android:src="@drawable/ic_share" />
 
     </RelativeLayout>
