Fix fcm, layout

--- a/WingDroid/app/src/main/res/layout/actv_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/actv_search_result.xml
@@ -12,6 +12,7 @@
         <SearchView
             style="@style/SearchView"
             android:id="@+id/searchView"
+            android:nestedScrollingEnabled="false"
             android:background="@null"
             android:layout_width="match_parent"
             android:layout_height="43dp" />
