--- a/WingDroid/app/src/main/res/layout/frag_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/frag_bookmark.xml
@@ -35,19 +35,22 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
                     android:gravity="right"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imgvFilter"
-                        android:layout_width="@dimen/ic_filter_width"
-                        android:layout_height="@dimen/ic_filter_height"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
                         android:layout_marginRight="16dp"
                         android:layout_marginTop="10dp"
+                        android:padding="6dp"
                         android:src="@drawable/ic_filter" />
 
-                    <include layout="@layout/item_sort_criteria" />
+                    <include layout="@layout/item_sort_criteria_center" />
 
                 </LinearLayout>
 
