--- a/WingDroid/app/src/main/res/layout/item_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/item_bookmark.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/bookmark_height"
+    android:layout_height="@dimen/search_result_height"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/news_padding">
@@ -12,33 +13,72 @@
     <ImageView
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/bookmark_img_width"
-        android:layout_height="@dimen/bookmark_img_width"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:background="@drawable/none_st_bd_greydark_rad30" />
+        android:layout_height="@dimen/bookmark_img_height" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_toRightOf="@id/imgvPreview"
-        android:gravity="center|left">
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/txtvName"
             style="@style/TextStyle.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             tools:text="TextSurface" />
+
+        <TextView
+            android:id="@+id/txtvCategory"
+            style="@style/TextStyle.Min"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtvName"
+            android:layout_marginTop="5dp"
+            tools:text="LIST/GRID" />
+
+        <TextView
+            android:id="@+id/txtvDescription"
+            style="@style/TextStyle.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/txtvCategory"
+            android:layout_marginTop="5dp"
+            android:maxLength="60"
+            tools:text="this is description!!" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recvTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txtvName"
+            android:layout_below="@id/txtvDescription"
+            android:layout_marginTop="10dp"
             android:minHeight="30dp" />
 
         <include layout="@layout/item_star" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/recvTag"
+            android:layout_toLeftOf="@+id/containerStar"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtvDate"
+                style="@style/TextStyle.Star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_min"
+                tools:text="2017.08.14" />
+
+        </LinearLayout>
+
+
     </RelativeLayout>
+
 </RelativeLayout>
