--- a/WingDroid/app/src/main/res/layout/item_issue.xml
+++ b/WingDroid/app/src/main/res/layout/item_issue.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/news_issue_height"
     android:orientation="vertical"
+    android:clickable="true"
+    android:background="?attr/selectableItemBackground"
     android:padding="@dimen/news_padding">
 
     <ImageView
