--- a/WingDroid/app/src/main/res/layout/item_search_category.xml
+++ b/WingDroid/app/src/main/res/layout/item_search_category.xml
@@ -2,7 +2,9 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true">
 
     <RelativeLayout
         android:id="@+id/btnCategory"
@@ -10,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/none_st_bd_greydark_rad30"
+        android:background="@drawable/bd_greydark_rad30"
         android:gravity="center"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
