--- a/WingDroid/app/src/main/res/layout/item_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/item_search_result.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/bookmark_img_width"
-        android:layout_height="@dimen/bookmark_img_width" />
+        android:layout_height="@dimen/bookmark_img_height" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -32,12 +32,11 @@
 
         <com.athkalia.emphasis.EmphasisTextView
             android:id="@+id/txtvCategory"
-            style="@style/TextStyle.Small"
+            style="@style/TextStyle.Min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_toRightOf="@id/txtvName"
+            android:layout_below="@id/txtvName"
+            android:layout_marginTop="5dp"
             tools:text="LIST/GRID" />
 
         <com.athkalia.emphasis.EmphasisTextView
@@ -45,9 +44,9 @@
             style="@style/TextStyle.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/txtvName"
+            android:layout_below="@id/txtvCategory"
             android:layout_marginTop="5dp"
-            android:maxLength="30"
+            android:maxLength="60"
             tools:text="this is description!!" />
 
         <android.support.v7.widget.RecyclerView
@@ -59,6 +58,26 @@
             android:minHeight="30dp" />
 
         <include layout="@layout/item_star" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/recvTag"
+            android:layout_toLeftOf="@+id/containerStar"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txtvDate"
+                style="@style/TextStyle.Star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize_min"
+                tools:text="2017.08.14" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 
