--- a/WingDroid/app/src/main/res/layout/item_suggestion.xml
+++ b/WingDroid/app/src/main/res/layout/item_suggestion.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/repository_suggestion_height"
     android:layout_weight="1"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/repository_suggestion_padding">
@@ -13,17 +15,17 @@
         android:id="@+id/imgvPreview"
         android:layout_width="@dimen/repository_suggestion_img_width"
         android:layout_height="@dimen/repository_suggestion_img_height"
-        android:scaleType="fitXY"
         android:adjustViewBounds="true"
-        android:background="@drawable/none_st_bd_greydark_rad30" />
+        android:scaleType="fitXY" />
 
     <TextView
         android:id="@+id/txtvName"
         style="@style/TextStyle.Title.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         tools:text="TextSurface" />
 
-    <include layout="@layout/item_star"/>
+    <include layout="@layout/item_star_right" />
 
 </LinearLayout>
