--- a/WingDroid/app/src/main/res/layout/frag_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/frag_bookmark.xml
@@ -7,6 +7,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:nestedScrollingEnabled="false"
         android:scrollbars="none">
 
         <RelativeLayout
