--- a/WingDroid/app/src/main/res/layout/frag_search.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search.xml
@@ -54,6 +54,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:nestedScrollingEnabled="false"
         android:layout_height="match_parent">
 
         <LinearLayout
